--- a/index.html
+++ b/index.html
@@ -100,23 +100,23 @@
 
         <section id="about" class="site-section section-about text-center">
             <div class="container">
-                <div class="row">
-                    <div>
-                        <h3>S O B R E M Í</h3>
-                        <hr>
-                        <p align="justify"> Desarrollador de aplicaciones web y móvil. Con formación en Front y Back,
-                            capacidad de trabajo en grupo
-                            mediante el uso de tecnologías ágiles. Adaptabilidad a diferentes lenguajes de programación
-                            y arquitecturas
-                            de diseño.
-                            <br> Estaría encantado de formar parte de su empresa, y seguir desarrollándome en el ámbito
-                            profesional.
-                        </p>
-                        <a href="assets/documents/CV_Bieito.pdf" class="btn btn-primary" target="_blank"
-                            download>Descarga
-                            mi CV</a>
-                    </div>
+                <div class="text-center">
+                    <h3>S O B R E M Í</h3>
+                    <hr>
                 </div>
+                <div class="row row_content">
+                    <p align="justify"> Desarrollador de aplicaciones web y móvil. Con formación en Front y Back,
+                        capacidad de trabajo en grupo
+                        mediante el uso de tecnologías ágiles. Adaptabilidad a diferentes lenguajes de programación
+                        y arquitecturas
+                        de diseño.
+                        <br> Estaría encantado de formar parte de su empresa, y seguir desarrollándome en el ámbito
+                        profesional.
+                    </p>
+                    <a href="assets/documents/CV_Bieito.pdf" class="btn btn-primary" target="_blank" download>Descarga
+                        mi CV</a>
+                </div>
+            </div>
             </div>
         </section>
 
@@ -126,7 +126,7 @@
                     <h3>C O N O C I M I E N T O S</h3>
                     <hr>
                 </div>
-                <div class="row">
+                <div class="row row_content">
                     <div class="col-md-4">
                         <div class="skill">
                             <h4>SQL</h4>
@@ -140,8 +140,6 @@
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
                         <div class="skill">
                             <h4>TYPESCRIPT, ANGULAR</h4>
                             <div class="progress">
@@ -154,8 +152,6 @@
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="60"></div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-4">
                         <div class="skill">
                             <h4>PHP, PYTHON</h4>
                             <div class="progress">
@@ -183,7 +179,9 @@
                 <div class="row">
                     <h3> F O R M A C I Ó N </h3>
                     <hr>
-                    <table class="table table-borderless"
+                </div>    
+                <div class="row row_content">
+                    <table class="table table-borderless "
                         style="display: flex; text-align: start;align-content: center;">
                         <tbody>
                             <tr>
@@ -215,10 +213,11 @@
         </section>
         <section id="experience" class="site-section section-services overlay text-center">
             <div class="container">
-                <div class="row">
+                <div >
                     <h3> E X P E R I E N C I A</h3>
                     <hr>
-                    <div class="row">
+                </div> 
+                    <div class="row row_content">
                         <div class="col-sm">
                             <p> 2021 6 meses</p>
                         </div>
@@ -236,7 +235,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row row_content">
                         <div class="col-sm">
                             <p>2021 6 meses</p>
                         </div>
@@ -254,7 +253,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row row_content">
                         <div class="col-sm">
                             <p>2019 3 meses</p>
                         </div>
@@ -271,7 +270,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row row_content">
                         <div class="col-sm">
                             <p>2018 6 meses</p>
                         </div>
@@ -287,7 +286,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row row_content">
                         <div class="col-sm">
                             <p>2017 6 meses</p>
                         </div>
@@ -307,7 +306,7 @@
 
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row row_content">
                         <div class="col-sm">
                             <p>2016 3 meses</p>
                         </div>
@@ -327,11 +326,13 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section id="myCarousel" class="site-section section-services overlay text-center">
             <div class="container">
                 <div class="row">
                     <h3>¡En constante formación!</h3>
                     <hr>
-                    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#myCarousel" data-slide-to="1"></li>
