Update social icons

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <ul class="nav navbar-nav navbar-right">
 
                         <li class="page-scroll"><a href="#hero">Principal</a></li>
-                        <li class="page-scroll"><a href="#about">Sobre mí</a></li>
+                        <li class="page-scroll"><a href="#about">Conóceme</a></li>
                         <li class="page-scroll"><a href="#skills">Conocimientos</a></li>
                         <li class="page-scroll"><a href="#training">Formación</a></li>
                         <li class="page-scroll"><a href="#experience">Experiencia</a></li>
@@ -78,17 +78,14 @@
     <div id="hero" class="hero">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 text-focus-in">
+                <div class="col-md-8 text-focus-in">
                     <h1>Bieito Sousa Barreiro</h1>
                     <div class="page-scroll">
-                        <p class="job-title tracking-in-expand">Técnico Superior en DAW</p>
-                    </div>
-                    <div class="page-scroll">
-                        <p class="job-title tracking-in-expand">Técnico Superior en ASIR</p>
+                        <p class="job-title tracking-in-expand">Desarrollador Full Stack</p>
                     </div>
                 </div>
 
-                <div class="col-md-6 text-right">
+                <div class="col-md-8 text-right">
                     <img src="assets/img/Bieito_Foto.png" alt="Bieito">
                 </div>
 
@@ -101,7 +98,7 @@
         <section id="about" class="site-section section-about text-center">
             <div class="container">
                 <div class="text-center">
-                    <h3>S O B R E M Í</h3>
+                    <h3>C O N Ó C E M E</h3>
                     <hr>
                 </div>
                 <div class="row row_content">
@@ -123,7 +120,7 @@
         <section id="skills" class="site-section section-skills">
             <div class="container">
                 <div class="text-center">
-                    <h3>C O N O C I M I E N T O S</h3>
+                    <h3>H A B I L I D A D E S</h3>
                     <hr>
                 </div>
                 <div class="row row_content">
@@ -140,6 +137,8 @@
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-4">
                         <div class="skill">
                             <h4>TYPESCRIPT, ANGULAR</h4>
                             <div class="progress">
@@ -152,6 +151,9 @@
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="60"></div>
                             </div>
                         </div>
+                    </div>
+                    <div class="col-md-4">
+
                         <div class="skill">
                             <h4>PHP, PYTHON</h4>
                             <div class="progress">
@@ -179,7 +181,7 @@
                 <div class="row">
                     <h3> F O R M A C I Ó N </h3>
                     <hr>
-                </div>    
+                </div>
                 <div class="row row_content">
                     <table class="table table-borderless "
                         style="display: flex; text-align: start;align-content: center;">
@@ -213,118 +215,118 @@
         </section>
         <section id="experience" class="site-section section-services overlay text-center">
             <div class="container">
-                <div >
+                <div>
                     <h3> E X P E R I E N C I A</h3>
                     <hr>
-                </div> 
-                    <div class="row row_content">
-                        <div class="col-sm">
-                            <p> 2021 6 meses</p>
-                        </div>
-                        <div class="col-sm experience_content">
-                            <p> IMATIA (Septiembre(2020)- Marzo 2021)
-                            </p>
-                            <p style="margin-bottom: 0px;"> Feuga para Técnico Superior de Aplicaciones Web
-                            </p>
-                            <p>
-                                <b> Puesto:</b> Desarrollador Web.</br>
-                                <b>Desempeño:</b> Creación de una web.</br>
-                                <b>Tecnologías :</b> SQL, Java, Spring, TypeScript, Angular, Node, Maven,
-                                Jira , GitHub, Html, Css …
-                            </p>
-
-                        </div>
+                </div>
+                <div class="row row_content">
+                    <div class="col-sm">
+                        <p> 2021 6 meses</p>
                     </div>
-                    <div class="row row_content">
-                        <div class="col-sm">
-                            <p>2021 6 meses</p>
-                        </div>
-                        <div class="col-sm experience_content">
-                            <p>IMATIA (Septiembre(2020)- Marzo 2021)
-                            </p>
-                            <p style="margin-bottom: 0px;"> Feuga para Técnico Superior de Aplicaciones Web
-                            </p>
-                            <p>
-                                <b> Puesto:</b> Desarrollador Web.</br>
-                                <b>Desempeño:</b> Creación de una web.</br>
-                                <b>Tecnologías :</b> SQL, Java, Spring, TypeScript, Angular, Node, Maven,
-                                Jira , GitHub, Html, Css …
-                            </p>
+                    <div class="col-sm experience_content">
+                        <p> IMATIA (Septiembre(2020)- Marzo 2021)
+                        </p>
+                        <p style="margin-bottom: 0px;"> Feuga para Técnico Superior de Aplicaciones Web
+                        </p>
+                        <p>
+                            <b> Puesto:</b> Desarrollador Web.</br>
+                            <b>Desempeño:</b> Creación de una web.</br>
+                            <b>Tecnologías :</b> SQL, Java, Spring, TypeScript, Angular, Node, Maven,
+                            Jira , GitHub, Html, Css …
+                        </p>
 
-                        </div>
-                    </div>
-                    <div class="row row_content">
-                        <div class="col-sm">
-                            <p>2019 3 meses</p>
-                        </div>
-                        <div class="col-sm experience_content">
-                            <p>TOKAPP SCHOOL (Septiembre-Diciembre
-                                2019)</p>
-                            <p style="margin-bottom: 0px;"> Feuga para Técnico Superior de Aplicaciones Web
-                            </p>
-                            <p>
-                                <b>Puesto:</b> Desarrollador Web. (Practicas) </br>
-                                <b>Desempeño:</b> Creación de nuevas funcionalidades para web.</br>
-                                <b>Tecnologías :</b> PHP, JavaScript, HTML, Css, MySQL, WordPress
-                            </p>
-
-                        </div>
-                    </div>
-                    <div class="row row_content">
-                        <div class="col-sm">
-                            <p>2018 6 meses</p>
-                        </div>
-                        <div class="col-sm experience_content">
-                            <p>LIDERA KNOWLEDGE SL (Diciembre
-                                (2018)-Mayo 2019)</p>
-                            <p>
-                                <b>Puesto:</b> Auxiliar Informático.</br>
-                                <b>Desempeño:</b> : Creación y mantenimiento de un servidor web, para la
-                                creación de cursos presenciales o semi -presenciales.</br>
-                                <b>Tecnologías :</b> WordPress , MySQL , PHP , HTML,JavaScript,Css
-                            </p>
-
-                        </div>
-                    </div>
-                    <div class="row row_content">
-                        <div class="col-sm">
-                            <p>2017 6 meses</p>
-                        </div>
-                        <div class="col-sm experience_content">
-                            <p>SATEC (Marzo-Agosto 2017 )</p>
-                            <p style="margin-bottom: 0px;">
-                                Beca Feuga para Técnico Superior Administración de Sistemas Informáticos en
-                                Rede
-                            </p>
-                            <p>
-                                <b>Puesto:</b> Gestor de integración</br>
-                                <b>Desempeño:</b> configuración, gestión y asistencia de incidencias para
-                                rúters. </br>
-                                <b>Tecnologías :</b> configuración : Cisco, Huawei, Teldat, VPN , Apertura
-                                de puertos
-                            </p>
-
-                        </div>
-                    </div>
-                    <div class="row row_content">
-                        <div class="col-sm">
-                            <p>2016 3 meses</p>
-                        </div>
-                        <div class="col-sm experience_content">
-                            <p> SERESCO (Septiembre-Diciembre 2016)
-                            </p>
-                            <p>
-                                <b>Puesto:</b> Informático de redes. (Practicas)</br>
-                                <b>Desempeño:</b> : Gestión, mantenimiento de equipo en remoto,
-                                seguridad informática, asesoramiento de las infraestructuras
-                                informáticas, prevención de riesgos informáticos, copias de seguridad
-                                y tratamiento de datos. </br>
-                                <b>Tecnologías :</b> Linux,Windows,vmware
-                            </p>
-
-                        </div>
                     </div>
                 </div>
+                <div class="row row_content">
+                    <div class="col-sm">
+                        <p>2021 6 meses</p>
+                    </div>
+                    <div class="col-sm experience_content">
+                        <p>IMATIA (Septiembre(2020)- Marzo 2021)
+                        </p>
+                        <p style="margin-bottom: 0px;"> Feuga para Técnico Superior de Aplicaciones Web
+                        </p>
+                        <p>
+                            <b>Puesto:</b> Desarrollador Web.</br>
+                            <b>Desempeño:</b> Creación de una web.</br>
+                            <b>Tecnologías :</b> SQL, Java, Spring, TypeScript, Angular, Node, Maven,
+                            Jira , GitHub, Html, Css …
+                        </p>
+
+                    </div>
+                </div>
+                <div class="row row_content">
+                    <div class="col-sm">
+                        <p>2019 3 meses</p>
+                    </div>
+                    <div class="col-sm experience_content">
+                        <p>TOKAPP SCHOOL (Septiembre-Diciembre
+                            2019)</p>
+                        <p style="margin-bottom: 0px;"> Feuga para Técnico Superior de Aplicaciones Web
+                        </p>
+                        <p>
+                            <b>Puesto:</b> Desarrollador Web. (Prácticas) </br>
+                            <b>Desempeño:</b> Creación de nuevas funcionalidades para web.</br>
+                            <b>Tecnologías :</b> PHP, JavaScript, HTML, Css, MySQL, WordPress
+                        </p>
+
+                    </div>
+                </div>
+                <div class="row row_content">
+                    <div class="col-sm">
+                        <p>2018 6 meses</p>
+                    </div>
+                    <div class="col-sm experience_content">
+                        <p>LIDERA KNOWLEDGE SL (Diciembre
+                            (2018)-Mayo 2019)</p>
+                        <p>
+                            <b>Puesto:</b> Auxiliar Informático.</br>
+                            <b>Desempeño:</b> : Creación y mantenimiento de un servidor web, para la
+                            creación de cursos presenciales o semi -presenciales.</br>
+                            <b>Tecnologías :</b> WordPress , MySQL , PHP , HTML,JavaScript,Css
+                        </p>
+
+                    </div>
+                </div>
+                <div class="row row_content">
+                    <div class="col-sm">
+                        <p>2017 6 meses</p>
+                    </div>
+                    <div class="col-sm experience_content">
+                        <p>SATEC (Marzo-Agosto 2017 )</p>
+                        <p style="margin-bottom: 0px;">
+                            Beca Feuga para Técnico Superior Administración de Sistemas Informáticos en
+                            Rede
+                        </p>
+                        <p>
+                            <b>Puesto:</b> Gestor de integración</br>
+                            <b>Desempeño:</b> configuración, gestión y asistencia de incidencias para
+                            rúters. </br>
+                            <b>Tecnologías :</b> configuración : Cisco, Huawei, Teldat, VPN , Apertura
+                            de puertos
+                        </p>
+
+                    </div>
+                </div>
+                <div class="row row_content">
+                    <div class="col-sm">
+                        <p>2016 3 meses</p>
+                    </div>
+                    <div class="col-sm experience_content">
+                        <p> SERESCO (Septiembre-Diciembre 2016)
+                        </p>
+                        <p>
+                            <b>Puesto:</b> Informático de redes. (Practicas)</br>
+                            <b>Desempeño:</b> : Gestión, mantenimiento de equipo en remoto,
+                            seguridad informática, asesoramiento de las infraestructuras
+                            informáticas, prevención de riesgos informáticos, copias de seguridad
+                            y tratamiento de datos. </br>
+                            <b>Tecnologías :</b> Linux, Windows, VMware
+                        </p>
+
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
         <section id="myCarousel" class="site-section section-services overlay text-center">
@@ -410,32 +412,35 @@
             </div>
         </section>
 
-        <section id="contact" class="site-section section-form text-center">
-            <div class="container">
-
-                <h3>Contacto</h3>
-                <hr>
-                <a class="row" href="mailto:bieito.sousa.1991@gmail.com">bieito.sousa.1991@gmail.com</a>
-            </div>
-        </section>
-
-
-
-
-
-
         <footer id="colophon" class="site-footer">
-            <div class="container">
+            <div class="container" id="contact">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
+
+                        <a class="icon gplus-bg" href="https://github.com/bieitoSousa/" target="_blank">
+                            <i class="fab fa-github"></i>
+                        </a>
 
                         <a class="icon gplus-bg" href="https://www.linkedin.com/in/bieito-sousa-490385136/"
                             target="_blank">
                             <i class="icon-linkedin"></i>
                         </a>
 
+                        <a class="icon gplus-bg" href="mailto:bieito.sousa.1991@gmail.com" target="_blank">
+                            <i class="far fa-envelope"></i>
+                        </a>
+
+                        <!-- <a class="icon icon-ij-container" href="https://www.linkedin.com/in/bieito-sousa-490385136/"
+                            target="_blank">
+                            <i class="icon-ij"></i>
+                        </a> -->
+
+
                     </div>
                     <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
+                        <p class="copyright">
+                            <a href="mailto:bieito.sousa.1991@gmail.com">bieito.sousa.1991@gmail.com</a>
+                        </p>
                         <p class="copyright">&copy; 2021. All Rights Reserved</p>
                     </div>
                     <div class="col-sm-4 col-xs-3">
