Update icon position

--- a/index.html
+++ b/index.html
@@ -415,27 +415,25 @@
         <footer id="colophon" class="site-footer">
             <div class="container" id="contact">
                 <div class="row">
-                    <div class="col-sm-4 col-xs-12">
+                    <div class="col-sm-4 col-xs-3" >
+                        <div class="col-sm-4 col-xs-3 center" >
+                            <a class="icon gplus-bg" href="https://github.com/bieitoSousa/" target="_blank">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                        <div class="col-sm-4 col-xs-3 center ">
 
-                        <a class="icon gplus-bg" href="https://github.com/bieitoSousa/" target="_blank">
-                            <i class="fab fa-github"></i>
-                        </a>
+                            <a class="icon gplus-bg" href="https://www.linkedin.com/in/bieito-sousa-490385136/"
+                                target="_blank">
+                                <i class="icon-linkedin"></i>
+                            </a>
+                        </div>
+                        <div  class="col-sm-4 col-xs-3 center" >
+                            <a class="icon gplus-bg" href="mailto:bieito.sousa.1991@gmail.com" target="_blank">
+                                <i class="far fa-envelope"></i>
+                            </a>
 
-                        <a class="icon gplus-bg" href="https://www.linkedin.com/in/bieito-sousa-490385136/"
-                            target="_blank">
-                            <i class="icon-linkedin"></i>
-                        </a>
-
-                        <a class="icon gplus-bg" href="mailto:bieito.sousa.1991@gmail.com" target="_blank">
-                            <i class="far fa-envelope"></i>
-                        </a>
-
-                        <!-- <a class="icon icon-ij-container" href="https://www.linkedin.com/in/bieito-sousa-490385136/"
-                            target="_blank">
-                            <i class="icon-ij"></i>
-                        </a> -->
-
-
+                        </div>
                     </div>
                     <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3">
                         <p class="copyright">
@@ -444,7 +442,7 @@
                         <p class="copyright">&copy; 2021. All Rights Reserved</p>
                     </div>
                     <div class="col-sm-4 col-xs-3">
-                        <div class="text-right page-scroll">
+                        <div class="center page-scroll">
                             <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
                         </div>
                     </div>
