--- a/index.html
+++ b/index.html
@@ -329,12 +329,12 @@
             </div>
             </div>
         </section>
-        <section id="myCarousel" class="site-section section-services overlay text-center">
+        <section id="myCarouselId" class="site-section section-services overlay text-center">
             <div class="container">
                 <div class="row">
                     <h3>¡En constante formación!</h3>
                     <hr>
-                    <div class="carousel slide" data-ride="carousel">
+                    <div id="myCarousel"  class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#myCarousel" data-slide-to="1"></li>
